# pet1_user_service

./: .env.example  .gitignore  Makefile  ReadMe.md  docker-compose.yml  pyproject.toml
Docker/tests/: Dockerfile
func_tests/: general_fixtures.py  test_db_creation.py
src/: app.py
src/api/: user_contracts.py
src/db/: engine.py  models.py
