[tool.poetry]
name = "user-service"
version = "0.1.0"
description = ""
authors = ["Alexandr Ovsyannikov <alexov2004@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
sqlalchemy = "^2.0.27"
sqlalchemy-utils = "^0.41.1"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
flake8 = "^7.0.0"
bandit = "^1.7.7"
black = "^24.2.0"
ruff = "^0.3.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
